# zapia-desktop

./: COMPILATION_LOG.md  package.json
.github/workflows/: cm2labs-zapia-deployment.yml  zapia-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html
